--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["public/js/*"],
+    "delay": 2500
   }
 }
