--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "isomorphic-unfetch": "^4.0.2",
+    "spotify-url-info": "^3.2.10"
   },
   "nodemonConfig": {
-    "ignore": ["public/js/*"],
+    "ignore": [
+      "public/js/*"
+    ],
     "delay": 2500
   }
 }
