--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
-    "isomorphic-unfetch": "^4.0.2",
-    "qs": "^6.11.2",
-    "spotify-url-info": "^3.2.10"
+    "socket.io": "^4.7.4"
   },
   "nodemonConfig": {
     "ignore": [
